# GitPulse-AI

./: INSTRUCTIONS.md  LICENSE  README.md  SETUP_INSTRUCTIONS.md  architecture.md  coding-standards.md  config.py  conftest.py  demo.py  index.html  main.py  package-lock.json  package.json  project-context.md  pyproject.toml  tailwind.config.js  techstack.md  tsconfig.json
cache/: __init__.py  session_cache.py
github/: __init__.py  client.py  commits.py  issues.py  pulls.py
gitpulse_mcp/: __init__.py  config.py  llm_client.py  main.py
gitpulse_mcp/api/: __init__.py  main.py
gitpulse_mcp/github/: files.py  repo.py
gitpulse_mcp/llm/: client.py  report_generator.py  schemas.py
gitpulse_mcp/models/: repository.py
gitpulse_mcp/services/: review_service.py
gitpulse_mcp/tests/: test_assessment_service.py  test_github_client.py  test_models.py
gitpulse_mcp/tools/: __init__.py  health.py  review.py  triage.py
llm/: report_generator.py
llm/prompts/: full_assessment.txt  health_narrative.txt  triage_issues.txt
models/: __init__.py  review.py  triage.py
services/: assessment_service.py  health_service.py  review_service.py  triage_service.py
src/: App.tsx  index.css
src/api/: client.ts
src/components/: AIInsightCard.tsx  ActivityTimeline.tsx  ChartCard.tsx  HealthBadge.tsx  MetricCard.tsx  Navbar.tsx  RepoTable.tsx  Sidebar.tsx
src/data/: mockData.ts
tests/: test_assessment_service.py  test_cache.py  test_health_service.py  test_report_generator.py  test_review_service.py  test_tools.py  test_triage_service.py
tools/: assessment.py
(+9 files in other folders)
